<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
             >

            <ImageButton
                android:id="@+id/events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tasks" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageButton
                android:id="@+id/guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/guide"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guide" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageButton
                android:id="@+id/plan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/notepad" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageButton
                android:id="@+id/params"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/params" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageButton
                android:id="@+id/centres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centres" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="1" >

            <ImageButton
                android:id="@+id/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tools" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tools" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>